Big changes, added tint support